Implement DESEQ2 preprocessing in new style